// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalPopup matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="c-modal-popup"
    id="popup"
  >
    <div
      class="modalPopupBody"
    >
      <h2
        class="modalPopupTitle"
        id="modal-title"
      >
        入力内容の確認
      </h2>
      <div
        class="modalPopupMain"
        id="popup-main"
      >
        <div
          id="mail-content"
        >
          <p>
            お名前：
          </p>
          <p>
            name
          </p>
          <p>
            メールアドレス：
          </p>
          <p>
            email@example.com
          </p>
          <p>
            お問い合わせ種別：
          </p>
          <p>
            category
          </p>
          <p>
            お問い合わせ内容：
          </p>
          <p>
            description
          </p>
        </div>
      </div>
      <div
        class="gridRow"
      >
        <button
          class="btnCancel"
          id="cancel-btn"
          type="button"
        >
          修正する
        </button>
        <button
          class="btnApply"
          id="apply-btn"
          type="button"
        >
          送信する
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModalPopup matches snapshot 2`] = `
<DocumentFragment>
  <div
    class="c-modal-popup"
    id="popup"
  >
    <div
      class="modalPopupBody"
    >
      <h2
        class="modalPopupTitle"
        id="modal-title"
      >
        入力内容の確認
      </h2>
      <div
        class="modalPopupMain"
        id="popup-main"
      >
        <div
          id="mail-content"
        >
          <p>
            お名前：
          </p>
          <p>
            name
          </p>
          <p>
            メールアドレス：
          </p>
          <p>
            email@example.com
          </p>
          <p>
            お問い合わせ種別：
          </p>
          <p>
            category
          </p>
          <p>
            お問い合わせ内容：
          </p>
          <p>
            description
          </p>
        </div>
      </div>
      <div
        class="gridRow"
      >
        <button
          class="btnCancel"
          id="cancel-btn"
          type="button"
        >
          修正する
        </button>
        <button
          class="btnApply"
          disabled=""
          id="apply-btn"
          type="button"
        >
          送信する
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
